Open Unifeob - models e controllers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/website.css">
+    <link rel="stylesheet" href="./styles/website.css">
     <title>Open UNIFEOB</title>
 </head>
 
@@ -24,7 +24,7 @@
                 <a href="">Vantagens</a>
                 <a href="">Fale Conosco</a>
             </nav>
-            <a class="login-button" href="/views/login.html">Login</a>
+            <a class="login-button" href="./views/login.php">Login</a>
         </header>
 
         <section class="inside-main">
@@ -37,22 +37,22 @@
                 </div>
             </div>
             <div class="inside-main-right">
-                <img src="/images/image-home-website.svg" alt="">
+                <img src="./images/image-home-website.svg" alt="">
             </div>
         </section>
     </main>
     <main class="cards">
         <section class="inside-cards">
             <div class="inside-cards-div">
-                <img src="/images/screen.svg" alt="">
+                <img src="./images/screen.svg" alt="">
                 <p>Acesse conteúdos<br>de qualquer curso.</p>
             </div>
             <div class="inside-cards-div">
-                <img src="/images/screen.svg" alt="">
+                <img src="./images/screen.svg" alt="">
                 <p>Aprenda a qualquer<br>momento.</p>
             </div>
             <div class="inside-cards-div">
-                <img src="/images/screen.svg" alt="">
+                <img src="./images/screen.svg" alt="">
                 <p>Alcance o próximo<br>nível ensinando.</p>
             </div>
         </section>
@@ -60,13 +60,11 @@
 
     <main class="about">
         <section class="inside-about">
-            <img src="/images/about-illustration.svg" alt="">
+            <img src="./images/about-illustration.svg" alt="">
             <div>
                 <p class="inside-about-title">Sobre</p>
-                <p class="inside-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus
-                    sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim
-                    praesent elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam dignissim
-                    diam quis ipsum.</p>
+                <p class="inside-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget
+                    nulla facilisi etiam dignissim diam quis ipsum.</p>
             </div>
         </section>
     </main>
@@ -112,30 +110,30 @@
             <p style="text-align: center;">Os cursos mais acessados da semana, acesse e matricule-se.</p>
             <div class="inside-highlights-div">
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
                 </div>
 
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
                 </div>
 
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
@@ -144,30 +142,30 @@
 
             <div class="inside-highlights-div">
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
                 </div>
 
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
                 </div>
 
                 <div class="inside-highlights-div-card">
-                    <img src="/images/js-course.png" alt="">
+                    <img src="./images/js-course.png" alt="">
                     <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu
-                        projeto.</p>
+                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
+                    </p>
                     <div class="tag">
                         <p>#tech</p>
                     </div>
@@ -188,33 +186,30 @@
     <main class="student">
         <section class="inside-student">
             <p class="inside-student-title">Estudante ensina estudante</p>
-            <p class="inside-student-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit
-                amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
+            <p class="inside-student-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
         </section>
     </main>
 
     <div class="detail">
-        <img src="/images/sentado.svg" alt="">
+        <img src="./images/sentado.svg" alt="">
     </div>
 
     <main class="benefits">
         <section class="section-benefits">
             <h2>Vantagens</h2>
             <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur</p>
-            <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus
-                sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent
-                elementum facilisis leo, vel fringilla est.</p>
+            <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est.</p>
             <div class="section-benefits-div">
                 <div class="section-benefits-div-card">
-                    <img src="/images/benefits-1.svg" alt="">
+                    <img src="./images/benefits-1.svg" alt="">
                     <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
                 </div>
                 <div class="section-benefits-div-card">
-                    <img src="/images/benefits-1.svg" alt="">
+                    <img src="./images/benefits-1.svg" alt="">
                     <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
                 </div>
                 <div class="section-benefits-div-card">
-                    <img src="/images/benefits-1.svg" alt="">
+                    <img src="./images/benefits-1.svg" alt="">
                     <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
                 </div>
             </div>
@@ -224,10 +219,9 @@
     <main class="contact">
         <section class="inside-contact">
             <h2>Fale Conosco</h2>
-            <p style="margin-bottom: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut <br> aliquam,
-                purus sit amet luctus venenatis, lectus mag.</p>
+            <p style="margin-bottom: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut <br> aliquam, purus sit amet luctus venenatis, lectus mag.</p>
             <div class="inside-contact-div">
-                <img src="/images/form-image.svg" alt="">
+                <img src="./images/form-image.svg" alt="">
                 <form action="#" method="POST">
                     <div class="inside-form">
                         <div>
@@ -240,12 +234,12 @@
                         </div>
                         <div>
                             <label for="mensagem">Mensagem:</label>
-                        <textarea name="mensagem" id="mensagem"></textarea>
+                            <textarea name="mensagem" id="mensagem"></textarea>
                         </div>
                         <div class="div-button">
                             <input class="submit-button" type="submit" value="Enviar">
                         </div>
-                    </div>       
+                    </div>
                 </form>
             </div>
         </section>
@@ -256,7 +250,7 @@
             <div class="inside-footer-div1">
                 <h2>Estudante ensina <br> estudante.</h2>
                 <p>Open UNIFEOB</p>
-                <a class="login-button" href="login.html">Login</a>
+                <a class="login-button" href="./views/login.html">Login</a>
             </div>
             <div class="inside-footer-div2">
                 <p>Menu</p>
@@ -270,9 +264,9 @@
             <div class="inside-footer-div3">
                 <p class="inside-footer-div3-p1">Redes Sociais</p>
                 <div class="footer-icons">
-                    <a href=""><img src="/images/instagram-icon.svg" alt=""></a>
-                    <a href=""><img src="/images/facebook-icon.svg" alt=""></a>
-                    <a href=""><img src="/images/whatsapp-icon.svg" alt=""></a>
+                    <a href=""><img src="./images/instagram-icon.svg" alt=""></a>
+                    <a href=""><img src="./images/facebook-icon.svg" alt=""></a>
+                    <a href=""><img src="./images/whatsapp-icon.svg" alt=""></a>
                 </div>
                 <p class="inside-footer-div3-p2">Desenvolvido por</p>
                 <p class="inside-footer-div3-p3">Equipe 1 - ADS M4</p>
@@ -280,7 +274,7 @@
             <div class="inside-footer-div4">
                 <p class="inside-footer-div4-p1">Entenda um pouco mais</p>
                 <p class="inside-footer-div4-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
-                <img class="unifeob-logo" src="/images/unifeob-logo.png" alt="">
+                <img class="unifeob-logo" src="./images/unifeob-logo.png" alt="">
             </div>
         </section>
     </footer>
