Quase todas funcionalidades prontas, correções de front e back

--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
     <main class="initial">
         <header>
             <h2>Open UNIFEOB</h2>
-            <nav>
-                <a href="">Início</a>
-                <a href="">Sobre</a>
-                <a href="">Categorias</a>
-                <a href="">Destaques</a>
-                <a href="">Vantagens</a>
-                <a href="">Fale Conosco</a>
-            </nav>
             <a class="login-button" href="./views/login.php">Login</a>
         </header>
 
@@ -32,8 +24,7 @@
                 <h1>Aprenda e ensine, <br>no mesmo lugar.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit ut aliquam.</p>
                 <div>
-                    <a class="learn-button" href="">Quero Aprender</a>
-                    <a class="to-teach-button" href="">Quero Ensinar</a>
+                    <a class="to-teach-button" href="">Saiba mais</a>
                 </div>
             </div>
             <div class="inside-main-right">
@@ -250,16 +241,7 @@
             <div class="inside-footer-div1">
                 <h2>Estudante ensina <br> estudante.</h2>
                 <p>Open UNIFEOB</p>
-                <a class="login-button" href="./views/login.html">Login</a>
-            </div>
-            <div class="inside-footer-div2">
-                <p>Menu</p>
-                <a href="">Início</a>
-                <a href="">Sobre</a>
-                <a href="">Categorias</a>
-                <a href="">Destaques</a>
-                <a href="">Vantagens</a>
-                <a class="item-margin" href="">Fale Conosco</a>
+                <a class="login-button" href="views/login.php">Login</a>
             </div>
             <div class="inside-footer-div3">
                 <p class="inside-footer-div3-p1">Redes Sociais</p>
