--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/website.css">
-    <title>Open UNIFEOB</title>
+    <title>Projeto Open Educação</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <main class="initial">
         <header>
-            <h2>Open UNIFEOB</h2>
+            <img class="logo" src="images/logobrancacomnome.png" alt="Logo do Projeto Open Educação">
             <a class="login-button" href="./views/login.php">Login</a>
         </header>
 
@@ -24,7 +25,7 @@
                 <h1>Aprenda e ensine, <br>no mesmo lugar.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit ut aliquam.</p>
                 <div>
-                    <a class="to-teach-button" href="">Saiba mais</a>
+                    <a class="to-teach-button" href="#saiba-mais">Saiba mais</a>
                 </div>
             </div>
             <div class="inside-main-right">
@@ -33,7 +34,7 @@
         </section>
     </main>
     <main class="cards">
-        <section class="inside-cards">
+        <section id="saiba-mais" class="inside-cards">
             <div class="inside-cards-div">
                 <img src="./images/screen.svg" alt="">
                 <p>Acesse conteúdos<br>de qualquer curso.</p>
@@ -51,145 +52,33 @@
 
     <main class="about">
         <section class="inside-about">
-            <img src="./images/about-illustration.svg" alt="">
+            <img src="./images/about-img.svg" alt="">
             <div>
                 <p class="inside-about-title">Sobre</p>
-                <p class="inside-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget
+                <p class="inside-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus
+                    sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim
+                    praesent elementum facilisis leo, vel fringilla est ullamcorper eget
                     nulla facilisi etiam dignissim diam quis ipsum.</p>
             </div>
-        </section>
-    </main>
-
-    <main class="category">
-        <section class="inside-category">
-            <h2 style="margin-bottom: 20px;">Categorias</h2>
-            <p style="margin-bottom: 20px;">Selecione uma categorias para visualizar alguns cursos em destaque</p>
-            <div style="margin-bottom: 20px;" class="inside-category-div">
-                <div class="inside-category-div-card">
-                    <p>Direito</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Tecnologia</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Fisioterapia</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Pedagogia</p>
-                </div>
-            </div>
-            <div class="inside-category-div">
-                <div class="inside-category-div-card">
-                    <p>Direito</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Tecnologia</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Fisioterapia</p>
-                </div>
-                <div class="inside-category-div-card">
-                    <p>Pedagogia</p>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <main class="highlights">
-        <section class="inside-highlights">
-            <h2>Cursos em destaque</h2>
-            <p style="text-align: center;">Os cursos mais acessados da semana, acesse e matricule-se.</p>
-            <div class="inside-highlights-div">
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="inside-highlights-div">
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-
-                <div class="inside-highlights-div-card">
-                    <img src="./images/js-course.png" alt="">
-                    <p class="inside-highlights-div-card-text">Animações com JS</p>
-                    <p class="inside-highlights-div-card-text-details">Aplique simples animações com JavaScript no seu projeto.
-                    </p>
-                    <div class="tag">
-                        <p>#tech</p>
-                    </div>
-                </div>
-
-
-
-
-            </div>
-
-            <div class="flex-course-button">
-                <a class="course-button" href="#">Cursos</a>
-            </div>
-
         </section>
     </main>
 
     <main class="student">
         <section class="inside-student">
             <p class="inside-student-title">Estudante ensina estudante</p>
-            <p class="inside-student-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
+            <p class="inside-student-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit
+                amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
         </section>
     </main>
-
-    <div class="detail">
-        <img src="./images/sentado.svg" alt="">
-    </div>
 
     <main class="benefits">
         <section class="section-benefits">
             <h2>Vantagens</h2>
             <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur</p>
-            <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est.</p>
+            <p class="align-text" style="margin-bottom: 20px; text-align: center;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit
+                ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus
+                non enim praesent elementum facilisis leo, vel fringilla est.</p>
             <div class="section-benefits-div">
                 <div class="section-benefits-div-card">
                     <img src="./images/benefits-1.svg" alt="">
@@ -210,7 +99,8 @@
     <main class="contact">
         <section class="inside-contact">
             <h2>Fale Conosco</h2>
-            <p style="margin-bottom: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut <br> aliquam, purus sit amet luctus venenatis, lectus mag.</p>
+            <p style="margin-bottom: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut <br> aliquam,
+                purus sit amet luctus venenatis, lectus mag.</p>
             <div class="inside-contact-div">
                 <img src="./images/form-image.svg" alt="">
                 <form action="#" method="POST">
@@ -240,8 +130,8 @@
         <section class="inside-footer">
             <div class="inside-footer-div1">
                 <h2>Estudante ensina <br> estudante.</h2>
-                <p>Open UNIFEOB</p>
-                <a class="login-button" href="views/login.php">Login</a>
+                <p>Projeto Open Educação</p>
+                <a class="login-button-footer" href="views/login.php">Login</a>
             </div>
             <div class="inside-footer-div3">
                 <p class="inside-footer-div3-p1">Redes Sociais</p>
@@ -251,12 +141,12 @@
                     <a href=""><img src="./images/whatsapp-icon.svg" alt=""></a>
                 </div>
                 <p class="inside-footer-div3-p2">Desenvolvido por</p>
-                <p class="inside-footer-div3-p3">Equipe 1 - ADS M4</p>
+                <p class="inside-footer-div3-p3">estudantes que acreditam na educação e na tecnologia.</p>
             </div>
             <div class="inside-footer-div4">
-                <p class="inside-footer-div4-p1">Entenda um pouco mais</p>
-                <p class="inside-footer-div4-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
-                <img class="unifeob-logo" src="./images/unifeob-logo.png" alt="">
+                <p class="inside-footer-div4-p1">Entenda um pouco mais sobre o projeto</p>
+                <p class="inside-footer-div4-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
+                    purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
             </div>
         </section>
     </footer>
