--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="inside-main">
             <div class="inside-main-left">
                 <h1>Aprenda e ensine, <br>no mesmo lugar.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit ut aliquam.</p>
+                <p>Relação ganha, ganha, ganha. <br> A instituição ganha, os professores ganham e os alunos também!</p>
                 <div>
                     <a class="to-teach-button" href="#saiba-mais">Saiba mais</a>
                 </div>
@@ -55,10 +55,15 @@
             <img src="./images/about-img.svg" alt="">
             <div>
                 <p class="inside-about-title">Sobre</p>
-                <p class="inside-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus
-                    sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim
-                    praesent elementum facilisis leo, vel fringilla est ullamcorper eget
-                    nulla facilisi etiam dignissim diam quis ipsum.</p>
+                <p class="inside-about-text">O Open Educação surgiu de um grupo de estudantes que debateram sobre
+                    inovação em educação. Todos já haviam vivido situações onde aprenderam com colegas mais experientes
+                    e também passaram por momentos onde ensinaram colegas mais jovens na carreira acadêmica. Para fazer
+                    com que este ciclo ganhasse escala e que outras pessoas pudessem ter acesso ao conhecimento de seus
+                    colegas de forma mais acessível, surgiu o Open Educação.
+                    Aqui os próprios estudantes podem criar cursos e conteúdos relevantes para seus colegas monitorados
+                    por seus docentes. Os alunos mais experientes compartilham conhecimento e experiência com os mais
+                    jovens, criando uma corrente de aprendizado contínua entre os colegas de estudos desde o nível
+                    básico até o universitário.</p>
             </div>
         </section>
     </main>
@@ -66,31 +71,30 @@
     <main class="student">
         <section class="inside-student">
             <p class="inside-student-title">Estudante ensina estudante</p>
-            <p class="inside-student-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit
-                amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
+            <p class="inside-student-text">Quem cria conteúdo, aprende mais! Chamamos de Metodologia Ativa, pois além de
+                ensinar, você pratica e fixa o conteúdo abordado. Com isso, pode impactar alunos da sua instituição que,
+                não necessariamente, em caso de dúvidas, recorrerão sempre ao professor, pois aqui os colegas que são
+                referências em aulas específicas, estão postando conteúdos relacionados e que podem sanar as possíveis
+                dúvidas. Esta é uma relação ganha, ganha, ganha. A instituição ganha, os professores ganham e os alunos
+                também!</p>
         </section>
     </main>
 
     <main class="benefits">
         <section class="section-benefits">
-            <h2>Vantagens</h2>
-            <p style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur</p>
-            <p class="align-text" style="margin-bottom: 20px; text-align: center;">Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit
-                ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus
-                non enim praesent elementum facilisis leo, vel fringilla est.</p>
+            <h2 style="margin-bottom: 20px;">Vantagens</h2>
             <div class="section-benefits-div">
                 <div class="section-benefits-div-card">
                     <img src="./images/benefits-1.svg" alt="">
-                    <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
+                    <p>Romper padrões tradicionais de educação.</p>
                 </div>
                 <div class="section-benefits-div-card">
                     <img src="./images/benefits-1.svg" alt="">
-                    <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
+                    <p>Auxiliar professores, incentivar o protagonismo e as metodologias ativas.</p>
                 </div>
                 <div class="section-benefits-div-card">
                     <img src="./images/benefits-1.svg" alt="">
-                    <p>Lorem ipsum dolor <br> sit amet consectetur <br> test word</p>
+                    <p>Custo de manutenção baixo e potencial de abrangência alto.</p>
                 </div>
             </div>
         </section>
@@ -98,9 +102,7 @@
 
     <main class="contact">
         <section class="inside-contact">
-            <h2>Fale Conosco</h2>
-            <p style="margin-bottom: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut <br> aliquam,
-                purus sit amet luctus venenatis, lectus mag.</p>
+            <h2 style="margin-bottom: 40px;">Fale Conosco</h2>
             <div class="inside-contact-div">
                 <img src="./images/form-image.svg" alt="">
                 <form action="#" method="POST">
@@ -144,9 +146,7 @@
                 <p class="inside-footer-div3-p3">estudantes que acreditam na educação e na tecnologia.</p>
             </div>
             <div class="inside-footer-div4">
-                <p class="inside-footer-div4-p1">Entenda um pouco mais sobre o projeto</p>
-                <p class="inside-footer-div4-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
-                    purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor.</p>
+                <img style="width: 100px;" src="images/logobrancacomnome.png" alt="">
             </div>
         </section>
     </footer>
