--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                 <p class="inside-footer-div3-p3">estudantes que acreditam na educação e na tecnologia.</p>
             </div>
             <div class="inside-footer-div4">
-                <img style="width: 100px;" src="images/logobrancacomnome.png" alt="">
+                <p class="inside-footer-div4-p1">Entenda um pouco mais</p>
+                <p class="inside-footer-div4-p2">Na metodologia ativa, o aluno é personagem principal e o maior responsável pelo processo de aprendizado. O objetivo desse modelo de ensino é incentivar que a comunidade acadêmica desenvolva a capacidade de absorção de conteúdos de maneira autônoma e participativa.</p>
             </div>
         </section>
     </footer>
